--- a/Part3/app/src/main/res/values/strings.xml
+++ b/Part3/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Part3</string>
+    <string name="title_activity_addnew_study2">AddnewStudyActivity2</string>
 </resources>
